tests/purs/failing/3510.purs
-- @shouldFailWith InvalidInstanceHead
module Main where

import Prelude (class Eq)

type T = {}
derive instance eqT :: Eq T
