tests/purs/failing/3510.out
Error found:
at tests/purs/failing/3510.purs:8:1 - 8:28 (line 8, column 1 - line 8, column 28)

  Type class instances for type synonyms are disallowed.


See https://github.com/purescript/documentation/blob/master/errors/TypeSynonymInstance.md for more information,
or to contribute content related to this error.

